# tjax

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  pylintrc  pyproject.toml  setup.cfg
.github/workflows/: release.yml
docs/tjax/: annotations.html  color_stub.html  dataclass.html  display.html  dtypes.html  fix_tree_repr.html  generator.html  graph.html  index.html  log_cotangent.html  partial.html  pytree_like.html  shims.html  testing.html  tools.html
examples/: meta_learning.py  recompilation.py
tests/: bessel_test.py  conftest.py  test_abstract_method_decorators.py  test_aliases.py  test_cotangent_tools.py  test_dataclasses.py  test_display.py  test_flax_display.py  test_flax_graph.py  test_flax_module.py  test_frozendict.py  test_graph.py  test_leaky_integral.py  test_log_cotangent.py  test_math_tools.py  test_numpy_tools.py  test_partial.py  test_project_tree.py  test_shims.py  test_testing.py  test_transforms.py  test_tree_tools.py
tests/fixed_point/: __init__.py  test_fixed_point.py  test_from_fax.py  test_use_classes.py
tjax/: __init__.py  annotations.py  bessel.py  copy_cotangent.py  cotangent_tools.py  dataclass.py  dataclasses.py  display.py  dtypes.py  fix_tree_repr.py  fixed_point.py  generator.py  gradient.py  gradient_transformation.py  graph.py  leaky_integral.py  log_cotangent.py  mypy_plugin.py  partial.py  plottable_trajectory.py  pytree_like.py  shims.py  testing.py  tools.py
tjax/_src/: __init__.py  abstract_method_decorators.py  annotations.py  color_stub.py  cotangent_tools.py  display.py  dtype_tools.py  dtypes.py  equinox_tools.py  flax_tools.py  frozendict.py  function_markers.py  generator.py  graph.py  k_means.py  leaky_integral.py  math_tools.py  numpy_tools.py  partial.py  plottable_trajectory.py  project_tree.py  rng.py  shims.py  testing.py  timer.py  tools.py  tree_tools.py
tjax/_src/dataclasses/: __init__.py  dataclass.py  dataclass_transform.py  flax.py  helpers.py  patch.py
tjax/_src/display/: __init__.py  batch_dimensions.py  colors.py  display_generic.py  generic_string.py  id_display.py  internal.py  print_generic.py  tapped.py
tjax/_src/fixed_point/: __init__.py  augmented.py  base.py  combinator.py  comparing.py  iterated_function.py  simple_scan.py  stochastic.py  zero.py
tjax/_src/gradient/: aliases.py  chain.py  smd.py  transform.py  transforms.py
tjax/_src/graph/: display.py  register_flax.py  register_jax.py  types_.py
tjax/fixed_point/: __init__.py  augmented.py  combinator.py  comparing.py  comparing_with_combinator.py  iterated_function.py  stochastic.py
tjax/gradient/: __init__.py  aliases.py  chain.py  meta_parameter.py  smd.py  transform.py  transforms.py
