[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "chex>=0.1.3",
  "jupyter>=1",
  "lefthook>=2",
  "matplotlib>=3.10",
  "networkx>=3.4",
  "pyrefly>=1.0",
  "pytest>=8",
  "ruff>=0.15.20",
  "scipy>=1.15",
  "toml-sort>=0.24",
  "ty>=0.0.53"
]

[project]
name = "tjax"
version = "1.7.1"
description = "Tools for JAX."
readme = "README.rst"
requires-python = ">=3.12, <3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Neil Girdhar", email = "mistersheik@gmail.com"}]
maintainers = [{name = "Neil Girdhar", email = "mistersheik@gmail.com"}]
keywords = [
  "dataclasses",
  "jax",
  "optax",
  "pytrees",
  "type-annotations"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "array-api-compat>=1.10",
  "jax>=0.10.2",
  "numpy>=2.2",
  "optax>=0.2.3",
  "optype[numpy]>=0.12.2",
  "rich>=13.7"
]

[project.urls]
Changelog = "https://github.com/NeilGirdhar/tjax/blob/main/CHANGELOG.md"
Documentation = "https://github.com/NeilGirdhar/tjax#readme"
Issues = "https://github.com/NeilGirdhar/tjax/issues"
Source = "https://github.com/NeilGirdhar/tjax"

[tool.pyrefly]
project-includes = [
  "**/*.py*",
  "**/*.ipynb"
]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "unused-function-argument",
  "unused-method-argument",
  "unused-class-method-argument",
  "unused-static-method-argument",
  "missing-trailing-comma",
  "missing-copyright-notice",
  "undocumented-public-module",
  "undocumented-public-class",
  "undocumented-public-method",
  "undocumented-public-function",
  "undocumented-magic-method",
  "undocumented-public-init",
  "docstring-missing-returns",
  "docstring-extraneous-returns",
  "docstring-missing-yields",
  "docstring-missing-exception",
  "commented-out-code",
  "line-contains-todo",
  "logging-f-string",
  "pandas-use-of-dot-at",
  "blanket-type-ignore",
  "too-many-arguments",
  "no-self-use",
  "ambiguous-unicode-character-docstring",
  "parenthesize-chained-operators",
  "float-equality-comparison",
  "assert",
  "typing-only-first-party-import",
  "typing-only-third-party-import",
  "typing-only-standard-library-import",
  "missing-todo-author",
  "missing-todo-link"
]

[tool.ruff.lint.flake8-errmsg]
max-string-length = 40

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"array_api_extra" = "xpx"
"ctypes" = "ct"
"datetime" = "dt"
"equinox" = "eqx"
"itertools" = "it"
"jax.numpy" = "jnp"
"jax.random" = "jr"
"jax.scipy.special" = "jss"
"networkx" = "nx"
"numpy.typing" = "npt"
"optimistix" = "optx"
"optype" = "op"
"optype.numpy" = "onp"
"optype.numpy.compat" = "npc"
"optype.typing" = "opt"
"pyqtgraph" = "pg"
"scipy.special" = "sc"
"seaborn" = "sns"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.uv.build-backend]
module-root = ""
